// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TableDetailWizard Stateful example 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--table-detail-wizard--wizard-wrapper"
  >
    <div
      className="iot--table-detail-wizard-header--wrapper"
    >
      <h2
        className="iot--table-detail-wizard-header--heading"
      >
        Create Physical Interface
      </h2>
      <div
        className="iot--table-detail-wizard-header--button"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--wizard-container"
    >
      <div
        className="iot--table-detail-wizard-sidebar--header"
      >
        <div
          className="iot--wizard-inline__sidebar"
          data-testid="wizard-sidebar"
          style={
            Object {
              "--min-width": "250px",
            }
          }
        >
          <ul
            className="iot--progress-indicator iot--progress-indicator--vertical"
            data-testid="iot--progress-indicator-testid"
          >
            <li
              className="iot--progress-step iot--progress-step--current"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-identity"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                tabIndex={-1}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Identity"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      1
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Identity"
                    value="Identity"
                  >
                    Identity
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-state-model"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="State Model"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="State Model"
                    value="State Model"
                  >
                    State Model
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-notifications"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Notifications"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Notifications"
                    value="Notifications"
                  >
                    Notifications
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-final-step"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="Final step"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      4
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Final step"
                    value="Final step"
                  >
                    Final step
                  </p>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="iot--table-detail-wizard--content-container"
      >
        <div
          data-testid="wizard-content"
        >
          <div
            style={
              Object {
                "backgroundColor": "#eaeaea",
              }
            }
          >
            <div>
              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--footer"
    >
      <div
        className="bx--modal-footer"
      >
        <div
          className="iot--wizard-footer__buttons"
          data-testid="wizard-footer"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--secondary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--primary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TableDetailWizard Static 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--table-detail-wizard--wizard-wrapper"
  >
    <div
      className="iot--table-detail-wizard-header--wrapper"
    >
      <h2
        className="iot--table-detail-wizard-header--heading"
      >
        Create Physical Interface
      </h2>
      <div
        className="iot--table-detail-wizard-header--button"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--wizard-container"
    >
      <div
        className="iot--table-detail-wizard-sidebar--header"
      >
        <div
          className="iot--wizard-inline__sidebar"
          data-testid="wizard-sidebar"
          style={
            Object {
              "--min-width": "250px",
            }
          }
        >
          <ul
            className="iot--progress-indicator iot--progress-indicator--vertical"
            data-testid="iot--progress-indicator-testid"
          >
            <li
              className="iot--progress-step iot--progress-step--complete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-identity"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line--complete"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Identity"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M14 21.414L9 16.413 10.413 15 14 18.586 21.585 11 23 12.415 14 21.414z"
                    />
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Identity"
                    value="Identity"
                  >
                    Identity
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--current"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-state-model"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                tabIndex={-1}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="State Model"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="State Model"
                    value="State Model"
                  >
                    State Model
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-notifications"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Notifications"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Notifications"
                    value="Notifications"
                  >
                    Notifications
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-final-step"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="Final step"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      4
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Final step"
                    value="Final step"
                  >
                    Final step
                  </p>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="iot--table-detail-wizard--content-container"
      >
        <div
          data-testid="wizard-content"
        >
          <div
            style={
              Object {
                "backgroundColor": "#dceadd",
                "padding": "70px 30px",
              }
            }
          >
            <div>
              Lorem ipsum dolor sit amet consectetur, adipisicing elit. Illum mollitia repellendus assumenda fuga inventore nisi, minus optio ullam voluptas eveniet dolore dolorem vitae, neque suscipit labore at. Voluptatum, nobis perferendis!
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--footer"
    >
      <div
        className="bx--modal-footer"
      >
        <div
          className="iot--wizard-footer__buttons"
          data-testid="wizard-footer"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--secondary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Back
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--primary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;

exports[`Storybook Snapshot tests and console checks Storyshots 1 - Watson IoT/TableDetailWizard with error 1`] = `
<div
  className="storybook-container"
>
  <div
    className="iot--table-detail-wizard--wizard-wrapper"
  >
    <div
      className="iot--table-detail-wizard-header--wrapper"
    >
      <h2
        className="iot--table-detail-wizard-header--heading"
      >
        Create Physical Interface
      </h2>
      <div
        className="iot--table-detail-wizard-header--button"
      >
        <button
          aria-describedby={null}
          aria-pressed={null}
          className="iot--btn bx--btn bx--btn--ghost"
          data-testid="Button"
          disabled={false}
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
          type="button"
        >
          <svg
            aria-hidden={true}
            fill="currentColor"
            focusable="false"
            height={20}
            preserveAspectRatio="xMidYMid meet"
            viewBox="0 0 32 32"
            width={20}
            xmlns="http://www.w3.org/2000/svg"
          >
            <path
              d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
            />
          </svg>
        </button>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--wizard-container"
    >
      <div
        className="iot--table-detail-wizard-sidebar--header"
      >
        <div
          className="iot--wizard-inline__sidebar"
          data-testid="wizard-sidebar"
          style={
            Object {
              "--min-width": "250px",
            }
          }
        >
          <ul
            className="iot--progress-indicator iot--progress-indicator--vertical"
            data-testid="iot--progress-indicator-testid"
          >
            <li
              className="iot--progress-step iot--progress-step--current"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step"
                data-testid="iot--progress-step-button-main-identity"
                disabled={false}
                onClick={null}
                onKeyDown={null}
                tabIndex={-1}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Identity"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <circle
                      cx="16"
                      cy="16"
                      r="10"
                    />
                    <path
                      d="M16,30A14,14,0,1,1,30,16,14.0158,14.0158,0,0,1,16,30ZM16,4A12,12,0,1,0,28,16,12.0137,12.0137,0,0,0,16,4Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      1
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Identity"
                    value="Identity"
                  >
                    Identity
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-state-model"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="State Model"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      2
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="State Model"
                    value="State Model"
                  >
                    State Model
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-notifications"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <div
                  className="iot--progress-step-line"
                />
                <span
                  className="iot--progress-step-icon"
                  title="Notifications"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      3
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Notifications"
                    value="Notifications"
                  >
                    Notifications
                  </p>
                </div>
              </button>
            </li>
            <li
              className="iot--progress-step iot--progress-step--incomplete"
              style={
                Object {
                  "height": "7rem",
                  "minHeight": "7rem",
                }
              }
            >
              <button
                aria-disabled={false}
                className="iot--progress-step-button iot--progress-step-button--main-step iot--progress-step-button--clickable"
                data-testid="iot--progress-step-button-main-final-step"
                disabled={false}
                onClick={[Function]}
                onKeyDown={[Function]}
                tabIndex={0}
                type="button"
              >
                <span
                  className="iot--progress-step-icon"
                  title="Final step"
                >
                  <svg
                    aria-hidden={true}
                    fill="currentColor"
                    focusable="false"
                    height={24}
                    preserveAspectRatio="xMidYMid meet"
                    viewBox="0 0 32 32"
                    width={24}
                    xmlns="http://www.w3.org/2000/svg"
                  >
                    <path
                      d="M16,2A14,14,0,1,0,30,16,14,14,0,0,0,16,2Zm0,26A12,12,0,1,1,28,16,12,12,0,0,1,16,28Z"
                    />
                    <text
                      dominantBaseline="middle"
                      textAnchor="middle"
                      x="50%"
                      y="55%"
                    >
                      4
                    </text>
                  </svg>
                </span>
                <div
                  className="iot--progress-text"
                >
                  <p
                    className="iot--progress-text-label"
                    title="Final step"
                    value="Final step"
                  >
                    Final step
                  </p>
                </div>
              </button>
            </li>
          </ul>
        </div>
      </div>
      <div
        className="iot--table-detail-wizard--content-container"
      >
        <div
          data-testid="wizard-content"
        >
          <div
            style={
              Object {
                "backgroundColor": "#eaeaea",
              }
            }
          >
            <div>
              Lorem ipsum dolor, sit amet consectetur adipisicing elit. Excepturi, corrupti laboriosam, culpa similique quae dolorum provident vitae iusto at velit dignissimos reiciendis maiores voluptate fugit dolore harum unde laborum facilis! Lorem ipsum dolor sit amet consectetur adipisicing elit. Et soluta placeat explicabo! Necessitatibus id neque accusantium molestiae officiis ducimus! Suscipit quae perferendis officiis vel, magnam est error! Vel, accusantium quas enim inventore natus adipisci autem at modi dolores assumenda mollitia ut facilis, deleniti aspernatur? Fuga at in expedita tempora cum quasi nemo neque alias id ullam omnis similique placeat provident, eum totam itaque perferendis, reiciendis laboriosam ducimus sunt facilis amet? Cupiditate voluptatem et, voluptas maxime sunt possimus repudiandae nisi necessitatibus?
            </div>
          </div>
        </div>
      </div>
    </div>
    <div
      className="iot--table-detail-wizard--inline-notification bx--inline-notification bx--inline-notification--error"
      kind="error"
      role="alert"
    >
      <div
        className="bx--inline-notification__details"
      >
        <svg
          aria-hidden={true}
          className="bx--inline-notification__icon"
          fill="currentColor"
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          viewBox="0 0 20 20"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M10,1c-5,0-9,4-9,9s4,9,9,9s9-4,9-9S15,1,10,1z M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
          />
          <path
            d="M13.5,14.5l-8-8l1-1l8,8L13.5,14.5z"
            data-icon-path="inner-path"
            opacity="0"
          />
          <title>
            error icon
          </title>
        </svg>
        <div
          className="bx--inline-notification__text-wrapper"
        >
          <p
            className="bx--inline-notification__title"
          >
            Error on the form
          </p>
          <div
            className="bx--inline-notification__subtitle"
          >
            
          </div>
        </div>
      </div>
      <button
        aria-label="closes notification"
        className="bx--inline-notification__close-button"
        onClick={[Function]}
        title="closes notification"
        type="button"
      >
        <svg
          aria-label="close notification"
          className="bx--inline-notification__close-icon"
          fill="currentColor"
          focusable="false"
          height={20}
          preserveAspectRatio="xMidYMid meet"
          role="img"
          viewBox="0 0 32 32"
          width={20}
          xmlns="http://www.w3.org/2000/svg"
        >
          <path
            d="M17.4141 16L24 9.4141 22.5859 8 16 14.5859 9.4143 8 8 9.4141 14.5859 16 8 22.5859 9.4143 24 16 17.4141 22.5859 24 24 22.5859 17.4141 16z"
          />
        </svg>
      </button>
    </div>
    <div
      className="iot--table-detail-wizard--footer"
    >
      <div
        className="bx--modal-footer"
      >
        <div
          className="iot--wizard-footer__buttons"
          data-testid="wizard-footer"
        >
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--secondary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Cancel
          </button>
          <button
            aria-describedby={null}
            aria-pressed={null}
            className="iot--btn bx--btn bx--btn--primary"
            data-testid="Button"
            disabled={false}
            onBlur={[Function]}
            onClick={[Function]}
            onFocus={[Function]}
            onMouseEnter={[Function]}
            onMouseLeave={[Function]}
            tabIndex={0}
            type="button"
          >
            Next
          </button>
        </div>
      </div>
    </div>
  </div>
</div>
`;
